Cannot get into graphical interface: "Could not create onscreen: Failed to allocate surface"
mutter-3.28.0-1.fc28.x86_64 gdm-3.28.0-5.fc28.x86_64 gnome-shell-3.28.0-1.fc28.x86_64
Hardware: ancient Lenovo Ideapad S10-3t
journalctl -ab | grep onscreen
shows some lines Could not create onscreen: Failed to allocate surface
$ lshw -C display
*-display:0
description: VGA compatible controller
product: Atom Processor D4xx/D5xx/N4xx/N5xx Integrated Graphics Controller
vendor: Intel Corporation
physical id: 2
bus info: pci@0000:00:02.0
version: 00
width: 32 bits
clock: 33MHz
capabilities: msi pm vga_controller bus_master cap_list rom
configuration: driver=i915 latency=0
resources: irq:16 memory:f0300000-f037ffff ioport:18e8(size=8) memory:d0000000-dfffffff memory:f0000000-f00fffff memory:c0000-dffff
*-display:1 UNCLAIMED
description: Display controller
product: Atom Processor D4xx/D5xx/N4xx/N5xx Integrated Graphics Controller
vendor: Intel Corporation
physical id: 2.1
bus info: pci@0000:00:02.1
version: 00
width: 32 bits
clock: 33MHz
capabilities: pm bus_master cap_list
configuration: latency=0
resources: memory:f0380000-f03fffff
$ coredumpctl gdb 2843
PID: 2843 (gnome-shell)
UID: 42 (gdm)
GID: 42 (gdm)
Signal: 11 (SEGV)
Timestamp: Thu 2018-03-22 12:22:53 CET (51min ago)
Command Line: /usr/bin/gnome-shell
Executable: /usr/bin/gnome-shell
Control Group: /user.slice/user-42.slice/session-c11.scope
Unit: session-c11.scope
Slice: user-42.slice
Session: c11
Owner UID: 42 (gdm)
Boot ID: 474fa2fe027b446097339b18b2f7aa74
Machine ID: d4d249912d3f4b43a3417982d7a4f1dd
Hostname: localhost.localdomain
Storage: /var/lib/systemd/coredump/core.gnome-shell.42.474fa2fe027b446097339b18b2f7aa74.2843.1521717773000000.lz4
Message: Process 2843 (gnome-shell) of user 42 dumped core.
Stack trace of thread 2843:
#0 0x00007f79a89462ab clutter_stage_view_get_onscreen (libmutter-clutter-2.so)
#1 0x00007f79a81aba18 meta_renderer_native_queue_modes_reset (libmutter-2.so.0)
#2 0x00007f79a81acbe5 meta_stage_native_rebuild_views (libmutter-2.so.0)
#3 0x00007f79a81a01e9 meta_backend_native_update_screen_size (libmutter-2.so.0)
#4 0x00007f79a80f7ff3 meta_backend_sync_screen_size (libmutter-2.so.0)
#5 0x00007f79a80f8a25 meta_backend_real_post_init (libmutter-2.so.0)
#6 0x00007f79a81a05b3 meta_backend_native_post_init (libmutter-2.so.0)
#7 0x00007f79a80f8fbf meta_clutter_init (libmutter-2.so.0)
#8 0x00007f79a81424a8 meta_init (libmutter-2.so.0)
#9 0x000055785a1f31fe main (gnome-shell)
#10 0x00007f79a7ad81bb __libc_start_main (libc.so.6)
#11 0x000055785a1f362a _start (gnome-shell)
Stack trace of thread 2848:
#0 0x00007f79a7ba4949 __poll (libc.so.6)
#1 0x00007f79a9c5bb16 g_main_context_iterate.isra.21 (libglib-2.0.so.0)
#2 0x00007f79a9c5bed2 g_main_loop_run (libglib-2.0.so.0)
#3 0x00007f79aa24b66a gdbus_shared_thread_func (libgio-2.0.so.0)
#4 0x00007f79a9c83cda g_thread_proxy (libglib-2.0.so.0)
#5 0x00007f79a7e7b564 start_thread (libpthread.so.0)
#6 0x00007f79a7baf33f __clone (libc.so.6)
Stack trace of thread 2849:
#0 0x00007f79a7ba9e19 syscall (libc.so.6)
#1 0x00007f79a9ca246e g_cond_wait_until (libglib-2.0.so.0)
#2 0x00007f79a9c2e0e1 g_async_queue_pop_intern_unlocked (libglib-2.0.so.0)
#3 0x00007f79a9c2e6d0 g_async_queue_timeout_pop (libglib-2.0.so.0)
#4 0x00007f79a9c84781 g_thread_pool_thread_proxy (libglib-2.0.so.0)
#5 0x00007f79a9c83cda g_thread_proxy (libglib-2.0.so.0)
#6 0x00007f79a7e7b564 start_thread (libpthread.so.0)
#7 0x00007f79a7baf33f __clone (libc.so.6)
Stack trace of thread 2850:
#0 0x00007f79a7ba4949 __poll (libc.so.6)
#1 0x00007f79a9c5bb16 g_main_context_iterate.isra.21 (libglib-2.0.so.0)
#2 0x00007f79a9c5bc40 g_main_context_iteration (libglib-2.0.so.0)
#3 0x00007f7994161e4d dconf_gdbus_worker_thread (libdconfsettings.so)
#4 0x00007f79a9c83cda g_thread_proxy (libglib-2.0.so.0)
#5 0x00007f79a7e7b564 start_thread (libpthread.so.0)
#6 0x00007f79a7baf33f __clone (libc.so.6)
Stack trace of thread 2847:
#0 0x00007f79a7ba4949 __poll (libc.so.6)
#1 0x00007f79a9c5bb16 g_main_context_iterate.isra.21 (libglib-2.0.so.0)
#2 0x00007f79a9c5bc40 g_main_context_iteration (libglib-2.0.so.0)
#3 0x00007f79a9c5bc91 glib_worker_main (libglib-2.0.so.0)
#4 0x00007f79a9c83cda g_thread_proxy (libglib-2.0.so.0)
#5 0x00007f79a7e7b564 start_thread (libpthread.so.0)
GNU gdb (GDB) Fedora 8.1-11.fc28
Copyright (C) 2018 Free Software Foundation, Inc.
Reading symbols from /usr/bin/gnome-shell...Reading symbols from /usr/lib/debug/usr/bin/gnome-shell-3.28.0-1.fc28.x86_64.debug...done.
done.
[New LWP 2843]
[New LWP 2848]
[New LWP 2849]
[New LWP 2850]
[New LWP 2847]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
warning: Loadable section ".note.gnu.property" outside of ELF segments
Core was generated by `/usr/bin/gnome-shell'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0 0x00007f79a89462ab in clutter_stage_view_get_onscreen (view=0x0) at clutter-stage-view.c:82
82 return priv->framebuffer;
[Current thread is 1 (Thread 0x7f79aab36f80 (LWP 2843))]
(gdb) thread apply all bt
Thread 5 (Thread 0x7f7994ddf700 (LWP 2847)):
#0 0x00007f79a7ba4949 in __GI___poll (fds=0x55785c3633e0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1 0x00007f79a9c5bb16 in g_main_context_poll (priority=<optimized out>, n_fds=1, fds=0x55785c3633e0, timeout=<optimized out>,
context=0x55785c3632a0) at gmain.c:4204
#2 g_main_context_iterate (context=context@entry=0x55785c3632a0, block=block@entry=1, dispatch=dispatch@entry=1,
self=<optimized out>) at gmain.c:3898
#3 0x00007f79a9c5bc40 in g_main_context_iteration (context=0x55785c3632a0, may_block=may_block@entry=1) at gmain.c:3964
#4 0x00007f79a9c5bc91 in glib_worker_main (data=<optimized out>) at gmain.c:5773
#5 0x00007f79a9c83cda in g_thread_proxy (data=0x55785c363400) at gthread.c:784
#6 0x00007f79a7e7b564 in start_thread (arg=<optimized out>) at pthread_create.c:463
#7 0x00007f79a7baf33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
Thread 4 (Thread 0x7f798effd700 (LWP 2850)):
#0 0x00007f79a7ba4949 in __GI___poll (fds=0x55785c397dc0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1 0x00007f79a9c5bb16 in g_main_context_poll (priority=<optimized out>, n_fds=1, fds=0x55785c397dc0, timeout=<optimized out>,
context=0x55785c397e50) at gmain.c:4204
#2 g_main_context_iterate (context=context@entry=0x55785c397e50, block=block@entry=1, dispatch=dispatch@entry=1,
self=<optimized out>) at gmain.c:3898
#3 0x00007f79a9c5bc40 in g_main_context_iteration (context=context@entry=0x55785c397e50, may_block=may_block@entry=1)
at gmain.c:3964
#4 0x00007f7994161e4d in dconf_gdbus_worker_thread (user_data=0x55785c397e50) at ../gdbus/dconf-gdbus-thread.c:82
#5 0x00007f79a9c83cda in g_thread_proxy (data=0x7f7988006540) at gthread.c:784
#6 0x00007f79a7e7b564 in start_thread (arg=<optimized out>) at pthread_create.c:463
#7 0x00007f79a7baf33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
Thread 3 (Thread 0x7f798f7fe700 (LWP 2849)):
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1 0x00007f79a9ca246e in g_cond_wait_until (cond=cond@entry=0x55785c372058, mutex=mutex@entry=0x55785c372050,
end_time=end_time@entry=278663161) at gthread-posix.c:1449
#2 0x00007f79a9c2e0e1 in g_async_queue_pop_intern_unlocked (queue=queue@entry=0x55785c372050, wait=wait@entry=1,
end_time=end_time@entry=278663161) at gasyncqueue.c:422
#3 0x00007f79a9c2e6d0 in g_async_queue_timeout_pop (queue=0x55785c372050, timeout=timeout@entry=15000000) at gasyncqueue.c:543
#4 0x00007f79a9c84781 in g_thread_pool_wait_for_new_pool () at gthreadpool.c:167
#5 g_thread_pool_thread_proxy (data=<optimized out>) at gthreadpool.c:364
#6 0x00007f79a9c83cda in g_thread_proxy (data=0x55785c363720) at gthread.c:784
#7 0x00007f79a7e7b564 in start_thread (arg=<optimized out>) at pthread_create.c:463
#8 0x00007f79a7baf33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
Thread 2 (Thread 0x7f798ffff700 (LWP 2848)):
#0 0x00007f79a7ba4949 in __GI___poll (fds=0x7f798800a650, nfds=3, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1 0x00007f79a9c5bb16 in g_main_context_poll (priority=<optimized out>, n_fds=3, fds=0x7f798800a650, timeout=<optimized out>,
context=0x55785c383a40) at gmain.c:4204
#2 g_main_context_iterate (context=0x55785c383a40, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>)
at gmain.c:3898
#3 0x00007f79a9c5bed2 in g_main_loop_run (loop=0x55785c383b80) at gmain.c:4099
#4 0x00007f79aa24b66a in gdbus_shared_thread_func (user_data=0x55785c383a10) at gdbusprivate.c:275
#5 0x00007f79a9c83cda in g_thread_proxy (data=0x55785c3634a0) at gthread.c:784
#6 0x00007f79a7e7b564 in start_thread (arg=<optimized out>) at pthread_create.c:463
#7 0x00007f79a7baf33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
Thread 1 (Thread 0x7f79aab36f80 (LWP 2843)):
#0 0x00007f79a89462ab in clutter_stage_view_get_onscreen (view=0x0) at clutter-stage-view.c:82
#1 0x00007f79a81aba18 in meta_renderer_native_queue_modes_reset (renderer_native=0x55785c3a41f0)
at backends/native/meta-renderer-native.c:2523
#2 0x00007f79a81acbe5 in meta_stage_native_rebuild_views (stage_native=0x55785c445ce0)
at ./backends/native/meta-renderer-native.h:37
#3 0x00007f79a81a01e9 in meta_backend_native_update_screen_size (backend=<optimized out>, width=1024, height=600)
at backends/native/meta-backend-native.c:567
#4 0x00007f79a80f7ff3 in meta_backend_sync_screen_size (backend=backend@entry=0x55785c3698d0)
at backends/meta-backend-private.h:52
#5 0x00007f79a80f8a25 in meta_backend_real_post_init (backend=0x55785c3698d0) at backends/meta-backend.c:439
#6 0x00007f79a81a05b3 in meta_backend_native_post_init (backend=0x55785c3698d0) at ./backends/meta-backend-private.h:52
#7 0x00007f79a80f8fbf in meta_backend_post_init (backend=0x0) at backends/meta-backend-private.h:52
#8 meta_clutter_init () at backends/meta-backend.c:1044
#9 0x00007f79a81424a8 in meta_init () at core/main.c:581
#10 0x000055785a1f31fe in main (argc=<optimized out>, argv=<optimized out>) at ../src/main.c:487
(gdb) thread apply all bt full
Thread 5 (Thread 0x7f7994ddf700 (LWP 2847)):
#0 0x00007f79a7ba4949 in __GI___poll (fds=0x55785c3633e0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
resultvar = 18446744073709551100
sc_cancel_oldtype = 0
sc_ret = <optimized out>
#1 0x00007f79a9c5bb16 in g_main_context_poll (priority=<optimized out>, n_fds=1, fds=0x55785c3633e0, timeout=<optimized out>,
context=0x55785c3632a0) at gmain.c:4204
ret = <optimized out>
errsv = 1547056096
poll_func = 0x7f79a9c6b3a0 <g_poll>
poll_func = <optimized out>
ret = <optimized out>
errsv = <optimized out>
#2 g_main_context_iterate (context=context@entry=0x55785c3632a0, block=block@entry=1, dispatch=dispatch@entry=1,
self=<optimized out>) at gmain.c:3898
max_priority = 2147483647
timeout = -1
some_ready = <optimized out>
nfds = 1
allocated_nfds = 1
fds = 0x55785c3633e0
#3 0x00007f79a9c5bc40 in g_main_context_iteration (context=0x55785c3632a0, may_block=may_block@entry=1) at gmain.c:3964
retval = <optimized out>
#4 0x00007f79a9c5bc91 in glib_worker_main (data=<optimized out>) at gmain.c:5773
No locals.
#5 0x00007f79a9c83cda in g_thread_proxy (data=0x55785c363400) at gthread.c:784
thread = 0x55785c363400
__func__ = "g_thread_proxy"
#6 0x00007f79a7e7b564 in start_thread (arg=<optimized out>) at pthread_create.c:463
pd = <optimized out>
now = 18446744073709551100
unwind_buf = {cancel_jmp_buf = {{jmp_buf = {140160165345024, 8465702178882528830, 140730482730510, 140730482730511,
140730482730640, 140730482730640, -8390453510444210626, -8390355054705695170}, mask_was_saved = 0}}, priv = {
pad = {0x0, 0x0, 0x0, 0x0}, data = {prev = 0x0, cleanup = 0x0, canceltype = 0}}}
not_first_call = <optimized out>
#7 0x00007f79a7baf33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
No locals.
Thread 4 (Thread 0x7f798effd700 (LWP 2850)):
#0 0x00007f79a7ba4949 in __GI___poll (fds=0x55785c397dc0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
resultvar = 18446744073709551100
sc_cancel_oldtype = 0
sc_ret = <optimized out>
#1 0x00007f79a9c5bb16 in g_main_context_poll (priority=<optimized out>, n_fds=1, fds=0x55785c397dc0, timeout=<optimized out>,
context=0x55785c397e50) at gmain.c:4204
ret = <optimized out>
errsv = 1547271616
poll_func = 0x7f79a9c6b3a0 <g_poll>
poll_func = <optimized out>
ret = <optimized out>
errsv = <optimized out>
#2 g_main_context_iterate (context=context@entry=0x55785c397e50, block=block@entry=1, dispatch=dispatch@entry=1,
self=<optimized out>) at gmain.c:3898
max_priority = 2147483647
timeout = -1
some_ready = <optimized out>
nfds = 1
allocated_nfds = 1
fds = 0x55785c397dc0
#3 0x00007f79a9c5bc40 in g_main_context_iteration (context=context@entry=0x55785c397e50, may_block=may_block@entry=1)
at gmain.c:3964
retval = <optimized out>
#4 0x00007f7994161e4d in dconf_gdbus_worker_thread (user_data=0x55785c397e50) at ../gdbus/dconf-gdbus-thread.c:82
context = 0x55785c397e50
#5 0x00007f79a9c83cda in g_thread_proxy (data=0x7f7988006540) at gthread.c:784
thread = 0x7f7988006540
__func__ = "g_thread_proxy"
#6 0x00007f79a7e7b564 in start_thread (arg=<optimized out>) at pthread_create.c:463
pd = <optimized out>
now = 18446744073709551100
unwind_buf = {cancel_jmp_buf = {{jmp_buf = {140160066901760, 8465702178882528830, 140730482729038, 140730482729039,
140730482729168, 140730482729168, -8390440607288711618, -8390355054705695170}, mask_was_saved = 0}}, priv = {
pad = {0x0, 0x0, 0x0, 0x0}, data = {prev = 0x0, cleanup = 0x0, canceltype = 0}}}
not_first_call = <optimized out>
#7 0x00007f79a7baf33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
No locals.
Thread 3 (Thread 0x7f798f7fe700 (LWP 2849)):
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
No locals.
#1 0x00007f79a9ca246e in g_cond_wait_until (cond=cond@entry=0x55785c372058, mutex=mutex@entry=0x55785c372050,
end_time=end_time@entry=278663161) at gthread-posix.c:1449
now = {tv_sec = 263, tv_nsec = 663166293}
span = {tv_sec = 14, tv_nsec = 999994707}
sampled = 0
res = 0
#2 0x00007f79a9c2e0e1 in g_async_queue_pop_intern_unlocked (queue=queue@entry=0x55785c372050, wait=wait@entry=1,
end_time=end_time@entry=278663161) at gasyncqueue.c:422
retval = 0xfffffffffffffdfc
__func__ = "g_async_queue_pop_intern_unlocked"
#3 0x00007f79a9c2e6d0 in g_async_queue_timeout_pop (queue=0x55785c372050, timeout=timeout@entry=15000000) at gasyncqueue.c:543
end_time = 278663161
retval = <optimized out>
#4 0x00007f79a9c84781 in g_thread_pool_wait_for_new_pool () at gthreadpool.c:167
pool = <optimized out>
local_max_idle_time = 15000
local_wakeup_thread_serial = <optimized out>
local_max_unused_threads = <optimized out>
last_wakeup_thread_serial = 0
have_relayed_thread_marker = <optimized out>
pool = <optimized out>
local_wakeup_thread_serial = <optimized out>
local_max_unused_threads = <optimized out>
local_max_idle_time = <optimized out>
last_wakeup_thread_serial = <optimized out>
have_relayed_thread_marker = <optimized out>
#5 g_thread_pool_thread_proxy (data=<optimized out>) at gthreadpool.c:364
free_pool = <optimized out>
task = <optimized out>
pool = <optimized out>
#6 0x00007f79a9c83cda in g_thread_proxy (data=0x55785c363720) at gthread.c:784
thread = 0x55785c363720
__func__ = "g_thread_proxy"
#7 0x00007f79a7e7b564 in start_thread (arg=<optimized out>) at pthread_create.c:463
pd = <optimized out>
now = 4294966780
unwind_buf = {cancel_jmp_buf = {{jmp_buf = {140160075294464, 8465702178882528830, 140730482729966, 140730482729967,
140730482730096, 140730482730096, -8390441706263468482, -8390355054705695170}, mask_was_saved = 0}}, priv = {
pad = {0x0, 0x0, 0x0, 0x0}, data = {prev = 0x0, cleanup = 0x0, canceltype = 0}}}
not_first_call = <optimized out>
#8 0x00007f79a7baf33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
No locals.
Thread 2 (Thread 0x7f798ffff700 (LWP 2848)):
#0 0x00007f79a7ba4949 in __GI___poll (fds=0x7f798800a650, nfds=3, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
resultvar = 18446744073709551100
sc_cancel_oldtype = 0
sc_ret = <optimized out>
#1 0x00007f79a9c5bb16 in g_main_context_poll (priority=<optimized out>, n_fds=3, fds=0x7f798800a650, timeout=<optimized out>,
context=0x55785c383a40) at gmain.c:4204
ret = <optimized out>
errsv = -2013223344
poll_func = 0x7f79a9c6b3a0 <g_poll>
poll_func = <optimized out>
ret = <optimized out>
errsv = <optimized out>
#2 g_main_context_iterate (context=0x55785c383a40, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>)
at gmain.c:3898
max_priority = 2147483647
timeout = -1
some_ready = <optimized out>
nfds = 3
allocated_nfds = 3
fds = 0x7f798800a650
#3 0x00007f79a9c5bed2 in g_main_loop_run (loop=0x55785c383b80) at gmain.c:4099
self = <optimized out>
__func__ = "g_main_loop_run"
#4 0x00007f79aa24b66a in gdbus_shared_thread_func (user_data=0x55785c383a10) at gdbusprivate.c:275
data = 0x55785c383a10
#5 0x00007f79a9c83cda in g_thread_proxy (data=0x55785c3634a0) at gthread.c:784
thread = 0x55785c3634a0
__func__ = "g_thread_proxy"
#6 0x00007f79a7e7b564 in start_thread (arg=<optimized out>) at pthread_create.c:463
pd = <optimized out>
now = 18446744073709551100
unwind_buf = {cancel_jmp_buf = {{jmp_buf = {140160083687168, 8465702178882528830, 140730482729438, 140730482729439,
140730482729568, 140730482729568, -8390442807385708994, -8390355054705695170}, mask_was_saved = 0}}, priv = {
pad = {0x0, 0x0, 0x0, 0x0}, data = {prev = 0x0, cleanup = 0x0, canceltype = 0}}}
not_first_call = <optimized out>
#7 0x00007f79a7baf33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
No locals.
Thread 1 (Thread 0x7f79aab36f80 (LWP 2843)):
#0 0x00007f79a89462ab in clutter_stage_view_get_onscreen (view=0x0) at clutter-stage-view.c:82
priv = 0xffffffffffffffc0
#1 0x00007f79a81aba18 in meta_renderer_native_queue_modes_reset (renderer_native=0x55785c3a41f0)
at backends/native/meta-renderer-native.c:2523
stage_view = 0x0
framebuffer = 0xffffffffffffffc0
onscreen_egl = <optimized out>
onscreen_native = <optimized out>
onscreen = 0xffffffffffffffc0
renderer = 0xffffffffffffffc0
l = 0x55785c397b60
#2 0x00007f79a81acbe5 in meta_stage_native_rebuild_views (stage_native=0x55785c445ce0)
at ./backends/native/meta-renderer-native.h:37
backend = 0xffffffffffffffc0
renderer = 0x55785c3a41f0
#3 0x00007f79a81a01e9 in meta_backend_native_update_screen_size (backend=<optimized out>, width=1024, height=600)
at backends/native/meta-backend-native.c:567
clutter_backend = 0x55785c37a940
stage_native = 0xffffffffffffffc0
stage = 0x55785c4455c0
#4 0x00007f79a80f7ff3 in meta_backend_sync_screen_size (backend=backend@entry=0x55785c3698d0)
at backends/meta-backend-private.h:52
priv = <optimized out>
width = 1024
height = 600
#5 0x00007f79a80f8a25 in meta_backend_real_post_init (backend=0x55785c3698d0) at backends/meta-backend.c:439
priv = 0x55785c369840
device_manager = 0x55785c43bda0
#6 0x00007f79a81a05b3 in meta_backend_native_post_init (backend=0x55785c3698d0) at ./backends/meta-backend-private.h:52
manager = 0x55785c43bda0
#7 0x00007f79a80f8fbf in meta_backend_post_init (backend=0x0) at backends/meta-backend-private.h:52
priv = 0x55785c369840
priv = <optimized out>
#8 meta_clutter_init () at backends/meta-backend.c:1044
source = <optimized out>
#9 0x00007f79a81424a8 in meta_init () at core/main.c:581
act = {__sigaction_handler = {sa_handler = 0x1, sa_sigaction = 0x1}, sa_mask = {__val = {0 <repeats 16 times>}},
sa_flags = 0, sa_restorer = 0x7f79a7e73958 <__libc_multiple_threads>}
empty_mask = {__val = {0 <repeats 16 times>}}
compositor_type = <optimized out>
backend_gtype = 93975431502400
#10 0x000055785a1f31fe in main (argc=<optimized out>, argv=<optimized out>) at ../src/main.c:487
ctx = 0x55785c362920
error = 0x0
ecode = <optimized out>
(gdb) info register
rax 0xffffffffffffffc0 -64
rbx 0x55785c397b60 93975431707488
rcx 0x1 1
rdx 0x55785c3a6ad0 93975431768784
rsi 0x55785c3b0700 93975431808768
rdi 0x0 0
rbp 0x55785c3a41f0 0x55785c3a41f0
rsp 0x7ffe5e6ea878 0x7ffe5e6ea878
r8 0x0 0
r9 0x55785c3b0700 93975431808768
r10 0xd 13
r11 0x10 16
r12 0x55785c445ce0 93975432420576
r13 0x55785c37a940 93975431588160
r14 0x0 0
r15 0x0 0
rip 0x7f79a89462ab 0x7f79a89462ab <clutter_stage_view_get_onscreen+11>
eflags 0x10206 [ PF IF RF ]
cs 0x33 51
ss 0x2b 43
ds 0x0 0
es 0x0 0
fs 0x0 0
gs 0x0 0
Edited by Andre Klapper